fix: 提高块跳转超链接与子窗口的 `z-index` 层级 | Raise the 'z-index' level of block jump hyperlinks and popover windows.

--- a/kernel/app/src/less/publish.less
+++ b/kernel/app/src/less/publish.less
@@ -12,6 +12,7 @@
                 left: -1.5rem;
                 width: 1.5rem;
                 // height: 1rem;
+                z-index: 1;
 
                 >svg {
                     color: var(--b3-theme-on-surface-light);
